[document] ドキュメントを整える #51   - swagger修正
